--- a/Apeyai.API/appsettings.json
+++ b/Apeyai.API/appsettings.json
@@ -8,3 +8,5 @@
   },
   "AllowedHosts": "*"
 }
+
+//Add-Migration AddCollectionNameInSchema -Project Apeyai.Persistence.Sqlite -StartupProject Apeyai.Persistence.EFCore.Migrations
